--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 }
 
 body {
-	background-image: url('wall.jpg');
+	background-image: url('./wall.jpg') !important;
 	background-size: contain;
 	background-repeat: round;
 }
